loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:7: error: value avance is not a member of Unit
possible cause: maybe a semicolon is missing before `value avance'?
    }avance()
     ^